--- a/assets/smallanimalcage/lang/en.json
+++ b/assets/smallanimalcage/lang/en.json
@@ -6,5 +6,5 @@
     "block-mediumanimalcage-*-opened-*": "Medium animal cage (open)",
     "blockdesc-mediumanimalcage-*-opened-*": "Attack a medium animal with this cage to catch it. The animal needs to be hurt or domesticated to be catchable.",
     "block-mediumanimalcage-*-closed-*": "Medium animal cage (closed)",
-    "blockdesc-mediumanimalcage-*-closed-*": "Contains a captured animal. Break the Block to release it."
+    "blockdesc-mediumanimalcage-*-closed-*": "Contains a captured animal. Break the Block to release it. Needs an empty backpack slot to be picked up."
 }
