--- a/resources/assets/animalcages/lang/de.json
+++ b/resources/assets/animalcages/lang/de.json
@@ -1,10 +1,10 @@
 {
-    "block-smallanimalcage-opened": "Kleintierkäfig (offen)",
-    "blockdesc-smallanimalcage-opened": "Greife ein Kleintier mit diesem Item an, um es einzufangen.",
-    "block-smallanimalcage-closed": "Kleintierkäfig (geschlossen)",
-    "blockdesc-smallanimalcage-closed": "Enthält ein gefangenes Kleintier. Zerstöre den Block, um es freizulassen.",
-    "block-mediumanimalcage-*-opened-*": "Mittelgroßer Tierkäfig (offen)",
-    "blockdesc-mediumanimalcage-*-opened-*": "Greife ein Tier mit diesem Item an, um es einzufangen. Das Tier muss verletzt oder domestiziert sein, um eingefangen werden zu können.",
-    "block-mediumanimalcage-*-closed-*": "Mittelgroßer Tierkäfig (geschlossen)",
-    "blockdesc-mediumanimalcage-*-closed-*": "Enthält ein gefangenes Tier. Zerstöre den Block, um es freizulassen. Für einen vollen Käfig im Inventar wird ein leerer Rucksackplatz benötigt."
+    "block-smallanimalcage-opened-*": "Kleintierkï¿½fig (offen)",
+    "blockdesc-smallanimalcage-opened-*": "Greife ein Kleintier mit diesem Item an, um es einzufangen.",
+    "block-smallanimalcage-closed-*": "Kleintierkï¿½fig (geschlossen)",
+    "blockdesc-smallanimalcage-closed-*": "Enthï¿½lt ein gefangenes Kleintier. Zerstï¿½re den Block, um es freizulassen.",
+    "block-mediumanimalcage-*-opened-*": "Mittelgroï¿½er Tierkï¿½fig (offen)",
+    "blockdesc-mediumanimalcage-*-opened-*": "Greife ein Tier mit diesem Item an, um es einzufangen. Das Tier muss verletzt oder domestiziert sein, um eingefangen werden zu kï¿½nnen.",
+    "block-mediumanimalcage-*-closed-*": "Mittelgroï¿½er Tierkï¿½fig (geschlossen)",
+    "blockdesc-mediumanimalcage-*-closed-*": "Enthï¿½lt ein gefangenes Tier. Zerstï¿½re den Block, um es freizulassen. Fï¿½r einen vollen Kï¿½fig im Inventar wird ein leerer Rucksackplatz benï¿½tigt."
 }
