--- a/resources/assets/animalcages/lang/en.json
+++ b/resources/assets/animalcages/lang/en.json
@@ -4,7 +4,7 @@
     "block-smallanimalcage-closed": "Small animal cage (closed)",
     "blockdesc-smallanimalcage-closed": "Contains a captured animal. Break the Block to release it.",
     "block-mediumanimalcage-*-opened-*": "Medium animal cage (open)",
-    "blockdesc-mediumanimalcage-*-opened-*": "Attack a medium animal with this cage to catch it. The animal needs to be hurt or domesticated to be catchable. Needs an empty backpack slot to be picked up.",
+    "blockdesc-mediumanimalcage-*-opened-*": "Attack a medium animal with this cage to catch it. The animal needs to be hurt or domesticated to be catchable.",
     "block-mediumanimalcage-*-closed-*": "Medium animal cage (closed)",
-    "blockdesc-mediumanimalcage-*-closed-*": "Contains a captured animal. Break the Block to release it. Needs an empty backpack slot to be picked up."
+    "blockdesc-mediumanimalcage-*-closed-*": "Contains a captured animal. Break the Block to release it."
 }
