--- a/resources/assets/animalcages/lang/fr.json
+++ b/resources/assets/animalcages/lang/fr.json
@@ -1,10 +1,10 @@
 {
     "block-smallanimalcage-opened": "Petite cage pour animaux (Ouverte)",
-    "blockdesc-smallanimalcage-opened": "Attaquez un petit animal avec cette cage pour l'attraper.",
+    "blockdesc-smallanimalcage-opened": "Frapper un petit animal avec cette cage pour l'attraper.",
     "block-smallanimalcage-closed": "Petite cage pour animaux (Fermée)",
     "blockdesc-smallanimalcage-closed": "Contient un animal capturé. Cassez le bloc pour le libérer.",
     "block-mediumanimalcage-*-opened-*": "Cage moyenne pour animaux (Ouverte)",
-    "blockdesc-mediumanimalcage-*-opened-*": "Attaquez un animal de taille moyenne avec cette cage pour le capturer. L'animal doit être blessé ou domestiqué pour être capturé.",
+    "blockdesc-mediumanimalcage-*-opened-*": "Frapper un animal de taille moyenne avec cette cage pour le capturer. L'animal doit être blessé ou domestiqué pour être capturé.",
     "block-mediumanimalcage-*-closed-*": "Cage moyenne pour animaux (Fermée)",
     "blockdesc-mediumanimalcage-*-closed-*": "Contient un animal capturé. Cassez le bloc pour le libérer."
 }
